fixes: The keyword list is limited to 5 keywords

--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
     },
     "keywords": [
         "Angular",
-        "Angular 2",
-        "Angular 4",
-        "Angular 5",
         "Angular Schule",
+        "Angular.Schule",        
         "TypeScript",
         "workshop"
     ],
