new: CoenraadS.bracket-pair-colorizer
Bracket Pair Colorizer
This extension allows matching brackets to be identified with colours. The user can define which characters to match, and which colours to use.

https://marketplace.visualstudio.com/items?itemName=CoenraadS.bracket-pair-colorizer

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
         "EditorConfig.EditorConfig",
         "robertohuertasm.vscode-icons",
         "msjsdiag.debugger-for-chrome",
-        "christian-kohler.path-intellisense"
+        "christian-kohler.path-intellisense",
+        "CoenraadS.bracket-pair-colorizer"
     ],
     "activationEvents": [
         "onCommand:extension.getVersion",
