new: formulahendry.auto-rename-tag
Auto Rename Tag
When you rename one HTML/XML tag, automatically rename the paired HTML/XML tag.

https://marketplace.visualstudio.com/items?itemName=formulahendry.auto-rename-tag

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
         "robertohuertasm.vscode-icons",
         "msjsdiag.debugger-for-chrome",
         "christian-kohler.path-intellisense",
-        "CoenraadS.bracket-pair-colorizer"
+        "CoenraadS.bracket-pair-colorizer",
+        "formulahendry.auto-rename-tag"
     ],
     "activationEvents": [
         "onCommand:extension.getVersion",
