new: formulahendry.auto-close-tag
Auto Close Tag
Automatically add closing tag when you type in the closing bracket of the opening tag. After closing tag is inserted, the cursor is between the opening and closing tag.

https://marketplace.visualstudio.com/items?itemName=formulahendry.auto-close-tag

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
         "msjsdiag.debugger-for-chrome",
         "christian-kohler.path-intellisense",
         "CoenraadS.bracket-pair-colorizer",
-        "formulahendry.auto-rename-tag"
+        "formulahendry.auto-rename-tag",
+        "formulahendry.auto-close-tag"
     ],
     "activationEvents": [
         "onCommand:extension.getVersion",
