new: thekalinga.bootstrap4-vscode
Bootstrap 4 & Font awesome snippets for Visual studio code

Visual studio code plugin containing Bootstrap 4, Font awesome 4 & Font Awesome 5 Free & Pro snippets. This plugin works in both in the stable & the insiders build

* To use the bootstrap snippets, open a HTML file, and start typing `b4-`, followed by pressing Ctrl+Space. A list of bootstrap snippets will show up
* To use font awesome 4 snippets, open a HTML file, and start typing `fa4-`, the editor will show you all the snippets
* To use font awesome 5 free snippets, open a HTML file, and start typing `fa5-`, the editor will show you all the snippets
* To use font awesome 5 pro snippets, open a HTML file, and start typing `fa5p-`, the editor will show you all the snippets

https://marketplace.visualstudio.com/items?itemName=thekalinga.bootstrap4-vscode

FYI @fmalcher

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
         "christian-kohler.path-intellisense",
         "CoenraadS.bracket-pair-colorizer",
         "formulahendry.auto-rename-tag",
-        "formulahendry.auto-close-tag"
+        "formulahendry.auto-close-tag",
+        "thekalinga.bootstrap4-vscode"
     ],
     "activationEvents": [
         "onCommand:extension.getVersion",
