--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "keywords": [
         "Angular",
         "Angular Schule",
-        "Angular.Schule",
+        "Angular.Schule",        
         "TypeScript",
         "workshop"
     ],
-    "version": "0.2.0",
+    "version": "0.1.2",
     "publisher": "angular-schule",
     "engines": {
         "vscode": "^1.12.0"
@@ -34,7 +34,7 @@
         "robertohuertasm.vscode-icons",
         "msjsdiag.debugger-for-chrome",
         "christian-kohler.path-intellisense",
-        "coenraads.bracket-pair-colorize",
+        "CoenraadS.bracket-pair-colorizer",
         "formulahendry.auto-rename-tag",
         "formulahendry.auto-close-tag",
         "thekalinga.bootstrap4-vscode"
@@ -51,7 +51,7 @@
                 "command": "extension.updateConfig",
                 "title": "Update User Settings (configuration in settings.json)",
                 "category": "Angular.Schule"
-            },
+            },            
             {
                 "command": "extension.getVersion",
                 "title": "Get Version",
@@ -68,7 +68,7 @@
                     "description": "If set to 'true', the extension will not update the user settings again. This setting is to 'true' after update."
                 }
             }
-        }
+        }        
     },
     "scripts": {
         "vscode:prepublish": "npm run compile",
