--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "keywords": [
         "Angular",
         "Angular Schule",
-        "Angular.Schule",        
+        "Angular.Schule",
         "TypeScript",
         "workshop"
     ],
-    "version": "0.1.2",
+    "version": "0.2.0",
     "publisher": "angular-schule",
     "engines": {
         "vscode": "^1.12.0"
@@ -51,7 +51,7 @@
                 "command": "extension.updateConfig",
                 "title": "Update User Settings (configuration in settings.json)",
                 "category": "Angular.Schule"
-            },            
+            },
             {
                 "command": "extension.getVersion",
                 "title": "Get Version",
@@ -68,19 +68,21 @@
                     "description": "If set to 'true', the extension will not update the user settings again. This setting is to 'true' after update."
                 }
             }
-        }        
+        }
     },
     "scripts": {
-        "vscode:prepublish": "npm run compile",
+        "prepublish": "npm run compile",
+        "publish": "vsce publish",
         "compile": "tsc -p ./",
         "watch": "tsc -watch -p ./",
         "postinstall": "node ./node_modules/vscode/bin/install",
         "test": "npm run compile && node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
-        "typescript": "^2.5.3",
-        "vscode": "^1.1.5",
+        "@types/mocha": "^2.2.42",
         "@types/node": "^7.0.43",
-        "@types/mocha": "^2.2.42"
+        "typescript": "^2.5.3",
+        "vsce": "^1.42.0",
+        "vscode": "^1.1.5"
     }
 }
