--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "TypeScript",
         "workshop"
     ],
-    "version": "0.4.2",
+    "version": "0.4.3",
     "publisher": "angular-schule",
     "engines": {
         "vscode": "^1.12.0"
@@ -37,7 +37,7 @@
         "CoenraadS.bracket-pair-colorizer",
         "formulahendry.auto-rename-tag",
         "AngularDoc.angulardoc-vscode",
-        "material-icon-theme",
+        "pkief.material-icon-theme",
         "aeschli.vscode-css-formatter"
     ],
     "activationEvents": [
