--- a/package.json
+++ b/package.json
@@ -20,23 +20,19 @@
         "TypeScript",
         "workshop"
     ],
-    "version": "0.4.7",
+    "version": "0.5.0",
     "publisher": "angular-schule",
     "engines": {
-        "vscode": "^1.12.0"
+        "vscode": "^1.57.0"
     },
     "categories": [
         "Extension Packs"
     ],
-    "extensionDependencies": [
-        "ms-vscode.vscode-typescript-tslint-plugin",
+    "extensionPack": [
+        "dbaeumer.vscode-eslint",
         "Angular.ng-template",
         "EditorConfig.EditorConfig",
-        "msjsdiag.debugger-for-chrome",
-        "christian-kohler.path-intellisense",
-        "formulahendry.auto-rename-tag",
-        "AngularDoc.angulardoc-vscode",
-        "aeschli.vscode-css-formatter"
+        "christian-kohler.path-intellisense"
     ],
     "activationEvents": [
         "onCommand:extension.getVersion",
@@ -74,14 +70,18 @@
         "vscode:publish": "vsce publish",
         "compile": "tsc -p ./",
         "watch": "tsc -watch -p ./",
-        "postinstall": "node ./node_modules/vscode/bin/install",
-        "test": "npm run compile && node ./node_modules/vscode/bin/test"
+        "lint": "eslint src --ext ts"
     },
     "devDependencies": {
-        "@types/mocha": "^2.2.42",
-        "@types/node": "^7.0.43",
-        "typescript": "^2.5.3",
-        "vsce": "^1.42.0",
-        "vscode": "^1.1.5"
+        "@types/vscode": "^1.57.0",
+        "@types/glob": "^7.1.3",
+        "@types/node": "14.x",
+        "eslint": "^7.27.0",
+        "@typescript-eslint/eslint-plugin": "^4.26.0",
+        "@typescript-eslint/parser": "^4.26.0",
+        "glob": "^7.1.7",
+        "typescript": "^4.3.2",
+        "vscode-test": "^1.5.2",
+        "vsce": "^1.93.0"
     }
 }
